After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750785 - playbin: assrender is not used anymore when available
playbin: assrender is not used anymore when available
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal blocker
: 1.5.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
: 750975 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-06-11 11:04 UTC by Arnaud Vrac
Modified: 2015-06-15 10:40 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Arnaud Vrac 2015-06-11 11:04:51 UTC
The assrender plugin is not automatically plugged anymore when an SSA subtitle track is processed, even if the ssaparse element is not installed; in this case I get the following warning:

WARNING No decoder available for type 'application/x-ass
Comment 1 Sebastian Dröge (slomo) 2015-06-11 13:33:27 UTC
Confirmed :(
Comment 2 Sebastian Dröge (slomo) 2015-06-11 14:21:15 UTC
commit 9c47e7d5e6fd273107c3b7acc7dc428f4a8766df
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Thu Jun 11 16:18:51 2015 +0200

    playbin: Check in autoplug_continue against the subtitle factory caps correctly
    
    6a2f017bfa9cb73c6db65eea0b84b1d5b56febb7 changed it to check the subtitle
    factory caps if there is a text-sink but we fail to get its sinkpad. What
    actually should be done here is to use the factory caps if there is no
    text-sink at all.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=750785
Comment 3 Sebastian Dröge (slomo) 2015-06-15 10:40:01 UTC
*** Bug 750975 has been marked as a duplicate of this bug. ***