playbin: Check in autoplug_continue against the subtitle factory caps correctly

6a2f017bfa9cb73c6db65eea0b84b1d5b56febb7 changed it to check the subtitle
factory caps if there is a text-sink but we fail to get its sinkpad. What
actually should be done here is to use the factory caps if there is no
text-sink at all.

https://bugzilla.gnome.org/show_bug.cgi?id=750785